# mini-rtl-agent

./: .env.example  .gitignore  GOAL.md  Makefile  README.md  main.py  note.md  pyproject.toml  workflow.md
architecture/: __init__.py  __main__.py
benchmarks/: router_benchmark.json  semantic_user_queries.json
data/rtl_skills/: index.json
docs/: demo_recording.md
hdl_agent/: __init__.py  __main__.py
scripts/: build_from_external_repo.sh  demo_hdl_agent_artifacts.sh  demo_skill_builder_axis.sh  demo_skill_retriever.sh  replay_demo_agent.sh  replay_demo_builder.sh  skillrouter_rerank_query.py  smoke_external_skill_repos.sh
skill_builder/: __init__.py  __main__.py
skill_retriever/: __init__.py  __main__.py
skills/: index.json
skills/async_fifo/: compact_card.json  skill.json  template.v
skills/axis_adapter/: compact_card.json  skill.json
skills/axis_broadcast/: compact_card.json  skill.json
skills/axis_demux/: compact_card.json  skill.json
skills/axis_fifo/: README.md  compact_card.json  module_info.json  skill.json  template.v
skills/axis_handshake_buffer/: compact_card.json  skill.json
skills/axis_mux/: compact_card.json  skill.json
skills/axis_pipeline_fifo/: README.md  compact_card.json  module_info.json  skill.json  template.v
skills/axis_rate_limit/: compact_card.json  skill.json
src/: __init__.py  agent.py  rtl_skill_index.py
src/hdl_agent/: cli.py  (+4 more)
tests/: test_architecture.py  test_hdl_agent.py  test_hdl_agent_artifacts.py  test_hdl_agent_ip_customization.py  test_llm_recording.py  test_skill_builder.py  test_skill_retriever.py
(+162 files in other folders)
